--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "material-components-web": "^2.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.1"
+    "react-hot-loader": "^4.11.1",
+    "react-router-dom": "^5.0.1",
+    "rmwc": "^5.5.2"
   }
 }
