--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@material/react-drawer": "^0.14.0",
     "@material/react-list": "^0.14.0",
     "@material/react-material-icon": "^0.14.0",
+    "@material/react-text-field": "^0.14.1",
     "@material/react-typography": "^0.14.1",
     "material-components-web": "^2.3.1",
     "react": "^16.8.6",
