app: transforms jsx source

--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
       "@babel/preset-react"
     ],
     "plugins": [
+      "@babel/plugin-transform-react-jsx-source",
       "react-hot-loader/babel"
     ]
 }
