app: working sidebar and topbar after welcome

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "css-loader": "^3.0.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.0.0",
@@ -36,9 +37,11 @@
     "@material/react-list": "^0.14.0",
     "@material/react-material-icon": "^0.14.0",
     "@material/react-text-field": "^0.14.1",
+    "@material/react-top-app-bar": "^0.14.1",
     "@material/react-typography": "^0.14.1",
     "material-components-web": "^2.3.1",
     "react": "^16.8.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.11.1",
     "react-router-dom": "^5.0.1",
