--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@material/react-text-field": "^0.14.1",
     "@material/react-top-app-bar": "^0.14.1",
     "@material/react-typography": "^0.14.1",
+    "draft-js": "^0.11.0",
     "material-components-web": "^2.3.1",
     "react": "^16.8.6",
     "react-custom-scrollbars": "^4.2.1",
