--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@material/react-button": "^0.14.0",
     "@material/react-card": "^0.14.1",
     "@material/react-drawer": "^0.14.0",
+    "@material/react-fab": "^0.14.1",
+    "@material/react-line-ripple": "^0.14.1",
     "@material/react-list": "^0.14.0",
     "@material/react-material-icon": "^0.14.0",
+    "@material/react-notched-outline": "^0.14.1",
     "@material/react-text-field": "^0.14.1",
     "@material/react-top-app-bar": "^0.14.1",
     "@material/react-typography": "^0.14.1",
